<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5pt"
    tools:context=".ExitActivity" >

    <TextView
        android:id="@+id/textView_exit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_exit"
        android:paddingBottom="10pt" 
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/exit_btn_ok"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/txt_exit_ok_btn" />

        <Button
            android:id="@+id/exit_btn_cancel"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/txt_exit_cancel_btn" />
    </LinearLayout>

</LinearLayout>